--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 13 00:52:35 BRT 2022
-sdk.dir=/Users/ruandias/Library/Android/sdk
+#Thu Jan 13 02:07:05 BRT 2022
+sdk.dir=C\:\\Users\\renan\\AppData\\Local\\Android\\Sdk
