--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jan 14 15:15:31 BRT 2022
-sdk.dir=/Users/ruandias/Library/Android/sdk
+#Fri Jan 14 16:10:16 BRT 2022
+sdk.dir=C\:\\Users\\renan\\AppData\\Local\\Android\\Sdk
